unlock: new tool to forcefully reset locks (this assumes the user is absolutely certain that nothing is doing anything with /path/to/jv)

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -107,6 +107,7 @@ function(tool_for_arch arch arch_extra_cflags qemu_objs)
     jove-trace2addrs.cpp
     jove-trace2asm.cpp
     jove-trace2lines.cpp
+    jove-unlock.cpp
     jove-unserialize.cpp
     jove-unstub.cpp
     jv2xml.cpp
