--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -69,7 +69,7 @@ function(tool_for_arch arch arch_extra_cflags qemu_objs)
     ../core/symbolizer.cpp
     ../core/tcg.cpp
     ../core/temp.cpp
-    ../core/tool.cpp
+    ../core/tool.cpp # has to come before all the tools
     ../core/triple.cpp
     ../core/util.cpp
     ../core/vdso.cpp
