introduce scoped_mmap

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -61,6 +61,7 @@ function(tool_for_arch arch arch_extra_cflags qemu_objs)
     ../core/ida.cpp
     ../core/jv.cpp
     ../core/locator.cpp
+    ../core/mmap.cpp
     ../core/process.cpp
     ../core/recovery.cpp
     ../core/score.cpp
