llvm: unbreak --call-stack mode ; {jove,rt}.c: take a different approach for maintaining an explict callstack for each thread. instead of having multiple callstacks floating around for a single thread, just work with one- which is mmaped to a file on-disk with the path ${JOVECALLS}.tid ; rt.c: introduce JOVEDEBUG=interactive, which is particularly helpful when debugging with the new environment variable ${JOVECALLS} ; rt.c: when non-recompiled code calls recompiled code, use an invalid index pair to mark the discontinuity ; introduce tool jove-callstack to make sense of callstack files, sometimes it is most useful when combined with watch

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -81,6 +81,7 @@ function(tool_for_arch arch arch_extra_cflags qemu_objs)
     jove-addr2off.cpp
     jove-analyze.cpp
     jove-bootstrap.cpp
+    jove-callstack.cpp
     jove-cfg.cpp
     jove-decompile.cpp
     jove-dig.cpp
