--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -76,6 +76,7 @@ function(tool_for_arch arch arch_extra_cflags qemu_objs)
     ../core/util.cpp
     ../core/vdso.cpp
     ../core/win.cpp
+    ../core/wine.cpp
     check-helper.cpp
     dump-vdso.cpp
     gen-tcgconstants.cpp
@@ -153,9 +154,9 @@ function(tool_for_arch arch arch_extra_cflags qemu_objs)
 
   if (CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86|i[3-6]86|x86_64)$")
     target_link_libraries(jove-${arch} PRIVATE libipt)
-    #target_link_libraries(jove-${arch} PRIVATE libipt-sb)
+    target_link_libraries(jove-${arch} PRIVATE libipt-sb)
     target_include_directories(jove-${arch} PRIVATE ${CMAKE_BINARY_DIR}/projects/jove/libipt/libipt/include)
-    #target_include_directories(jove-${arch} PRIVATE ${CMAKE_BINARY_DIR}/projects/jove/libipt/sideband/include)
+    target_include_directories(jove-${arch} PRIVATE ${CMAKE_BINARY_DIR}/projects/jove/libipt/sideband/include)
   endif()
 
   target_include_directories(jove-${arch} PRIVATE
