perf::data_reader, which we can use in jove-ipt to extract data from perf.data (much faster than libipt/script/perf-read-aux.bash)

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -63,6 +63,7 @@ function(tool_for_arch arch arch_extra_cflags qemu_objs)
     ../core/jv.cpp
     ../core/locator.cpp
     ../core/mmap.cpp
+    ../core/perf.cpp
     ../core/process.cpp
     ../core/recovery.cpp
     ../core/score.cpp
