--- a/.gitmodules
+++ b/.gitmodules
@@ -28,4 +28,4 @@
 	url = https://github.com/boostorg/boost.git
 [submodule "libipt"]
 	path = libipt
-	url = https://github.com/intel/libipt.git
+	url = https://github.com/jove-decompiler/libipt.git
