CMakeLists.txt: -Werror=format

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -17,6 +17,7 @@ set(JOVE_TOOL_FLAGS
   "-Wno-gnu-designator"
   "-Wno-gnu-statement-expression-from-macro-expansion"
   "-Wno-c99-extensions"
+  "-Werror=format"
   "-DBOOST_ICL_USE_STATIC_BOUNDED_INTERVALS"
   "-DBOOST_INTERPROCESS_POSIX_ROBUST_MUTEXES"
 )
