--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -18,6 +18,7 @@ set(JOVE_TOOL_FLAGS
   "-Wno-gnu-statement-expression-from-macro-expansion"
   "-Wno-c99-extensions"
   "-Werror=format"
+  "-Werror=return-stack-address"
   "-DBOOST_ICL_USE_STATIC_BOUNDED_INTERVALS"
   "-DBOOST_INTERPROCESS_POSIX_ROBUST_MUTEXES"
 )
