CMakeLists.txt: style (comment)

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,25 +3,28 @@ set(JOVE_VERSION "v0.8")
 set(JOVE_TOOL_FLAGS
   "-fwrapv"
 # "-ftemplate-backtrace-limit=0"
-  "-Werror=return-type"
-  "-Wno-initializer-overrides"
-  "-Wno-c99-designator"
-  "-Wno-deprecated-declarations"
-  "-Wno-cast-qual"
-  "-Wno-bitwise-instead-of-logical"
-  "-Wno-sign-compare"
-  "-Wno-bit-int-extension"
-  "-Wno-gnu-case-range"
-  "-Wno-nested-anon-types"
-  "-Wno-gnu-anonymous-struct"
-  "-Wno-gnu-designator"
-  "-Wno-gnu-statement-expression-from-macro-expansion"
-  "-Wno-c99-extensions"
-  "-Wno-unused-lambda-capture"
-  "-Werror=format"
-  "-Werror=return-stack-address"
+
   "-DBOOST_ICL_USE_STATIC_BOUNDED_INTERVALS"
   "-DBOOST_INTERPROCESS_POSIX_ROBUST_MUTEXES"
+
+  # opiniated stuff...
+  "-Werror=format"
+  "-Werror=return-stack-address"
+  "-Werror=return-type"
+  "-Wno-bit-int-extension"
+  "-Wno-bitwise-instead-of-logical"
+  "-Wno-c99-designator"
+  "-Wno-c99-extensions"
+  "-Wno-cast-qual"
+  "-Wno-deprecated-declarations"
+  "-Wno-gnu-anonymous-struct"
+  "-Wno-gnu-case-range"
+  "-Wno-gnu-designator"
+  "-Wno-gnu-statement-expression-from-macro-expansion"
+  "-Wno-initializer-overrides"
+  "-Wno-nested-anon-types"
+  "-Wno-sign-compare"
+  "-Wno-unused-lambda-capture"
 )
 
 set(JOVE_ALL_TARGETS
