--- a/.gitmodules
+++ b/.gitmodules
@@ -29,3 +29,6 @@
 [submodule "libipt"]
 	path = libipt
 	url = https://github.com/jove-decompiler/libipt.git
+[submodule "linux"]
+	path = linux
+	url = https://github.com/torvalds/linux.git
