--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -77,6 +77,7 @@ function(tool_for_arch arch arch_extra_cflags qemu_objs)
     ../core/pipe.cpp
     ../core/process.cpp
     ../core/recovery.cpp
+    ../core/reflink.cpp
     ../core/score.cpp
     ../core/serialize.cpp
     ../core/sideband.cpp
