#define BOOST_RECURSIVE_DFS

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -6,6 +6,7 @@ set(JOVE_TOOL_FLAGS
 
   "-DBOOST_ICL_USE_STATIC_BOUNDED_INTERVALS"
   "-DBOOST_INTERPROCESS_POSIX_ROBUST_MUTEXES"
+  "-DBOOST_RECURSIVE_DFS"
 
   # opiniated stuff...
   "-Werror=format"
