function: Callers ; jv state: SubjectToChange ; analyze: style (refactor) ; llvm: assume data flow analysis has been done (but assert) ; dump: Callers

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -59,8 +59,10 @@ function(tool_for_arch arch arch_extra_cflags qemu_objs)
   add_llvm_tool(jove-${arch}
     ../core/B.cpp
     ../core/add.cpp
+    ../core/analyze.cpp
     ../core/binary.cpp
     ../core/block.cpp
+    ../core/calls.cpp
     ../core/coff.cpp
     ../core/crypto.cpp
     ../core/disas.cpp
