--- a/.gitmodules
+++ b/.gitmodules
@@ -34,4 +34,4 @@
 	url = https://github.com/torvalds/linux.git
 [submodule "wine"]
 	path = wine
-	url = https://github.com/wine-mirror/wine.git
+	url = https://github.com/jove-decompiler/wine.git
