--- a/.gitmodules
+++ b/.gitmodules
@@ -31,7 +31,7 @@
 	url = https://github.com/jove-decompiler/libipt.git
 [submodule "linux"]
 	path = linux
-	url = https://github.com/torvalds/linux.git
+	url = https://github.com/jove-decompiler/linux.git
 [submodule "wine"]
 	path = wine
 	url = https://github.com/jove-decompiler/wine.git
