--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,6 +38,8 @@ jobs:
           context: .
           load: true
           tags: ${{ env.LATEST_TAG }}
+          cache-to: type=inline
+
       -
         name: Test
         run: |
@@ -50,3 +52,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ${{ env.LATEST_TAG }}
+          cache-from: type=inline
