--- a/.gitmodules
+++ b/.gitmodules
@@ -35,3 +35,6 @@
 [submodule "wine"]
 	path = wine
 	url = https://github.com/jove-decompiler/wine.git
+[submodule "zlib"]
+	path = zlib
+	url = https://github.com/madler/zlib.git
