CI.yml: better comments

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           docker run --rm --privileged -v /dev:/dev ${{ env.LATEST_TAG }} /jove/scripts/ci_check.sh
 
-      # 3) Now just push that same local image to Docker Hub.
+      # 3) Tests succeeded. Now just push that same local image to Docker Hub.
       -
         name: Push
         run: |
