tools/CMakeLists.txt: -Wno-missing-template-arg-list-after-template-kw since otherwise boost fails to build

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -25,6 +25,7 @@ set(JOVE_TOOL_FLAGS
   "-Wno-nested-anon-types"
   "-Wno-sign-compare"
   "-Wno-unused-lambda-capture"
+  "-Wno-missing-template-arg-list-after-template-kw"
 )
 
 set(JOVE_ALL_TARGETS
