--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ tags
 /bin/*/*.tmp
 /bin/*/asm-offsets.h
 /bin/*/linux.copy.h
+/bin/*/tcgconstants.h
 /bin/*/env.copy.h
 /bin/*/qemu.tcg.copy.h
 /bin/*/qemu.tcg.copy.*.h
